src/index.css
html {
  scrollbar-gutter: stable;
  scroll-behavior: smooth;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --background: #102216ff;
  --background-secondary: #114221ff;
  --background-aside: #111813ff;
  --background-hover: rgb(10, 38, 19);
  --text-primary: #ffffff;
  --text-secondary: #13ec5bff;
  --text-small: #93ad9bff;
  --cards-secondary: #1c2d21ff;
  --border: #28392eff;
  --border-light: #13ec5bff;
}

body {
  font-family: system-ui;
  background-color: var(--background);
  color: var(--text-primary);
}

#root {
  display: flex;
  flex-direction: row;
}

a {
  text-decoration: none;
  color: var(--text-primary);
}

main {
  padding: 1rem 2rem;
  flex: 1;
}

h1 {
  margin-bottom: 1rem;
}

button {
  cursor: pointer;
}

table {
  border-radius: 1rem;
  background: #233027ff;

  table-layout: fixed;
  border-collapse: collapse;

  th, td {
    padding: .5rem .75rem;
    text-align: start;
  }

  tbody tr:nth-child(odd) {
    background-color: rgba(255, 255, 255, 0.05);
  }

  tbody {

    tr {
      border-top: 2px solid var(--border);
    }

    /* Last row bottom left radius */
    tr:last-child td:first-child,
    tr:last-child th:first-child {
      border-bottom-left-radius: 1rem;
    }

    /* Last row bottom right radius */
    tr:last-child td:last-child,
    tr:last-child th:last-child {
      border-bottom-right-radius: 1rem;
    }
  }
}

.menu-section {
  padding-top: 1rem;
  display: flex;
  flex-direction: column;
}

.menu-subsection {
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  gap: 1.5rem;
}

.menu-subsection > h3 {
  grid-column: 1 / -1;
  margin-bottom: .5rem;
}

.tables-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  gap: 1.5rem;
}

.small-buttons-container {
  display: flex;
  flex-direction: row;
  gap: .25rem;
}

.small-button {
  color: var(--text-small);
  padding: .075rem .5rem;
  border-radius: .35rem;
  border: 1px solid var(--border);
  background-color: var(--background-secondary);
  appearance: none;
  transition: transform 0.2s;

  &:active {
    transform: scale(1.1);
  }

  &:disabled {
    background-color: rgba(255, 255, 255, 0.1);
  }
}

